--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,10 @@
     {
       font-family: 'Titillium Web', sans-serif;
     }
+    #logo
+    {
+    font-family: 'Aclonica';font-size: 22px;
+    }
     .bg-dark
     {
       background-color: #2c3e50 !important;
@@ -139,4 +143,15 @@ margin-left: -15px;
   {
     width: 100%;
   }
+}
+.e
+{
+  font-size:2rem;
+  color: white;
+  background-color: transparent;
+}
+.e:hover
+{
+  text-decoration: none;
+  color: white;
 }
